# Katechon

./: AGENTS.md  README.md  pyproject.toml
agent_context/: BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
src/active_defense_watchdog_research.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/watchdog_research/: __init__.py  adversarial_planner.py  cli.py  config.py  control_policies.py  domain.py  effectors.py  evaluation.py  loop.py  openclaw_effector.py  openclaw_planner.py  openclaw_sensors.py  openclaw_utils.py  planner.py  reporting.py  scenarios.py  sensors.py  verifier.py
tests/: conftest.py  openclaw_fakes.py  test_adversarial_planner.py  test_control_policies.py  test_evaluation.py  test_loop.py  test_openclaw_effector.py  test_openclaw_planner.py  test_openclaw_sensors.py  test_planner.py  test_sensors_feedback.py  test_state_and_verifier.py
